# z-ed

./: .gitignore  .replit  CMakeLists.txt  Makefile  README.md  file  main.c  old.c  replit.nix
docs/: posix.html
docs/imgs/: map.desc
old/: lib.c  lib.c.deprecated  old.c  scrap.c
old/rewriten/: old.c
src/: comm.c  commproc.c  ed.h  lib.c  main.c  main.h  test.c
tests/: file
tests/db/: file
